--- a/cpg1.5.x/CHANGELOG.txt
+++ b/cpg1.5.x/CHANGELOG.txt
@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2008-12-16 [B] Fixed category list in modifyalb.php {Paver}
 2008-12-15 [A] Added keyword separator {Paver}
 2008-12-15 [B] Added missing javascripts {SaWey}
 2008-12-15 [O] Replaced inline javascript of admin and albmgr section + optimised for jQuery (admin.js, albmgr.js) {SaWey}
